@@ -72,18 +72,19 @@ into a new module, mod_cache.
 
 <H2>Directives</H2>
 <UL>
-<LI><A HREF="#proxyrequests">ProxyRequests</A>
-<LI><A HREF="#proxyremote">ProxyRemote</A>
+<LI><A HREF="#allowconnect">AllowCONNECT</A>
+<LI><A HREF="#noproxy">NoProxy</A>
+<LI><A HREF="#proxyblock">ProxyBlock</A>
+<LI><A HREF="#proxydomain">ProxyDomain</A>
+<LI><A HREF="#proxyerroroverride">ProxyErrorOverride</A>
+<LI><A HREF="#proxymaxforwards">ProxyMaxForwards</A>
 <LI><A HREF="#proxypass">ProxyPass</A>
 <LI><A HREF="#proxypassreverse">ProxyPassReverse</A>
-<LI><A HREF="#proxyblock">ProxyBlock</A>
-<LI><A HREF="#allowconnect">AllowCONNECT</A>
+<LI><A HREF="#proxypreservehost">ProxyPreserveHost</A>
 <LI><A HREF="#proxyreceivebuffersize">ProxyReceiveBufferSize</A>
-<LI><A HREF="#proxymaxforwards">ProxyMaxForwards</A>
-<LI><A HREF="#noproxy">NoProxy</A>
-<LI><A HREF="#proxydomain">ProxyDomain</A>
+<LI><A HREF="#proxyremote">ProxyRemote</A>
+<LI><A HREF="#proxyrequests">ProxyRequests</A>
 <LI><A HREF="#proxyvia">ProxyVia</A>
-<LI><A HREF="#proxyerroroverride">ProxyErrorOverride</A>
 
 </UL>
 
@@ -222,6 +223,44 @@ to the correct, fully qualified, server address. This is the preferred method
 since the user's bookmark files will then contain fully qualified hosts.</P>
 
 <HR>
+<H2><A NAME="proxyrequests">ProxyPreserveHost</A> directive</H2>
+<A
+ HREF="directive-dict.html#Syntax"
+ REL="Help"
+ ><STRONG>Syntax:</STRONG></A> ProxyPreserveHost on|off<BR>
+<A
+ HREF="directive-dict.html#Default"
+ REL="Help"
+><STRONG>Default:</STRONG></A> <CODE>ProxyPreserveHost Off</CODE><BR>
+<A
+ HREF="directive-dict.html#Context"
+ REL="Help"
+><STRONG>Context:</STRONG></A> server config, virtual host<BR>
+<A
+ HREF="directive-dict.html#Override"
+ REL="Help"
+><STRONG>Override:</STRONG></A> <EM>Not applicable</EM><BR>
+<A
+ HREF="directive-dict.html#Status"
+ REL="Help"
+><STRONG>Status:</STRONG></A> Base<BR>
+<A
+ HREF="directive-dict.html#Module"
+ REL="Help"
+><STRONG>Module:</STRONG></A> mod_proxy<BR>
+<A
+ HREF="directive-dict.html#Compatibility"
+ REL="Help"
+><STRONG>Compatibility:</STRONG></A> ProxyPreserveHost is only available in
+Apache 2.0.31 and later.<P>
+
+When enabled, this option will pass the Host: line from the incoming request to
+the proxied host, instead of the hostname specified in the proxypass line.
+</P>
+<P>This option should normally be turned 'off'.</P>
+
+<HR>
+
 
 <H2><A NAME="proxyrequests">ProxyRequests</A> directive</H2>
 <A
