@@ -488,16 +488,32 @@ apr_status_t ap_proxy_http_request(apr_pool_t *p, request_rec *r,
     buf = apr_pstrcat(p, r->method, " ", url, " HTTP/1.1" CRLF, NULL);
     e = apr_bucket_pool_create(buf, strlen(buf), p);
     APR_BRIGADE_INSERT_TAIL(bb, e);
-    if (uri->port_str && uri->port != DEFAULT_HTTP_PORT) {
-        buf = apr_pstrcat(p, "Host: ", uri->hostname, ":", uri->port_str, CRLF,
-                          NULL);
-        e = apr_bucket_pool_create(buf, strlen(buf), p);
-        APR_BRIGADE_INSERT_TAIL(bb, e);
-    } else {
-        buf = apr_pstrcat(p, "Host: ", uri->hostname, CRLF, NULL);
-        e = apr_bucket_pool_create(buf, strlen(buf), p);
-        APR_BRIGADE_INSERT_TAIL(bb, e);
+    if ( conf->preserve_host == 0 ) {
+        if (uri->port_str && uri->port != DEFAULT_HTTP_PORT) {
+            buf = apr_pstrcat(p, "Host: ", uri->hostname, ":", uri->port_str, CRLF,
+                            NULL);
+        } else {
+            buf = apr_pstrcat(p, "Host: ", uri->hostname, CRLF, NULL);
+        }
+    } 
+    else {
+        /* don't want to use r->hostname, as the incoming header might have a 
+         * port attached 
+         */
+        const char* hostname = apr_table_get(r->headers_in,"Host");        
+        if (!hostname) {
+            hostname =  r->server->server_hostname;
+            ap_log_rerror(APLOG_MARK, APLOG_NOERRNO|APLOG_WARNING, 0, r,
+                          "proxy: no HTTP 0.9 request (with no host line) "
+                          "on incoming request and preserve host set "
+                          "forcing hostname to be %s for uri %s", 
+                          hostname, 
+                          r->uri );
+        }
+        buf = apr_pstrcat(p, "Host: ", hostname, CRLF, NULL);
     }
+    e = apr_bucket_pool_create(buf, strlen(buf), p);        
+    APR_BRIGADE_INSERT_TAIL(bb, e);
 
     /* handle Via */
     if (conf->viaopt == via_block) {
